welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:16: error: not found: value MondeLargeur
        setPos(MondeLargeur-(cpt+1)%getMondeLargeur(),i)
               ^ZigZag:26: error: not found: value f
  f
  ^ZigZag:51: error: not found: value rep
  rep= false
  ^ZigZag:52: error: reassignment to val
  if(x=0%2){rep=true}
      ^ZigZag:52: error: not found: value rep
  if(x=0%2){rep=true}
            ^ZigZag:53: error: not found: value rep
  return rep
         ^ZigZag:32: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime7.ZigZag'
override def run() {
             ^